# gpushard

./: .gitignore  Dockerfile.cuda  Dockerfile.rocm  LICENSE  README.md  docker-compose.yaml  pyproject.toml
ringtorch/: pyproject.toml
ringtorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ringtorch/common/: tensor_io.py  types.py
ringtorch/coordinator/: planner.py  ring.py  schemas.py  server.py
ringtorch/scripts/: launch_coordinator.sh  launch_worker_cuda.sh  launch_worker_hip.sh
ringtorch/worker/: engine.py  model_slicer.py  schemas.py  server.py
scripts/: generate_compose.sh
tests/: test_ring_fake_tensor.py
