[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ringtorch"
version = "0.1.0"
description = "Minimal Exo-style ring for PyTorch"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "torch",
    "transformers",
]

[tool.setuptools.packages.find]
include = ["ringtorch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

